2011-07-21  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-taperscan.7.xml: Typo.

2011-07-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h: Add CONF_EJECT_VOLUME
	* common-src/conffile.c: Add CNF_EJECT_VOLUME
	* man/xml-source/amanda.conf.5.xml: Document eject-volume.
	* perl/Amanda/Config.swg: Add CNF_EJECT_VOLUME.
	* perl/Amanda/Changer/single.pm: Eject the device if the eject
	  params is set in $res->release()
	* perl/Amanda/Taper/Scribe.pm (new): Get eject_volume params.
	* perl/Amanda/Taper/Scribe.pm (_release_reservation): Call
	  $res->release with the eject params if needed.
	* perl/Amanda/Taper/Worker.pm: Make the Scribe with the eject_volume
	  params set to $CNF_EJECT_VOLUME

2011-07-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (make_error): callback is optional.
	* perl/Amanda/Changer/disk.pm: Check if disk is mounted before locking.
	* perl/Amanda/ScanInventory.pm (_scan): fail only on fatal error.
	* perl/Amanda/Taper/Controller.pm: Put error message in double quote.
	* perl/Amanda/Taper/Worker.pm: Put message in double quote.

2011-07-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): consider number of dle on volume
	  and max-dle-by-volume for allowing use of new volume.

2011-07-15  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-changers.7.xml: Add chg-single documentation.

2011-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c:Increase S3_DEVICE_MAX_BLOCK_SIZE to 3GiB.

2011-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c:Increase S3_DEVICE_MAX_BLOCK_SIZE to 5TiB.

2011-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add CONF_MAX_DLE_BY_VOLUME.
	* common-src/conffile.h: Add CNF_MAX_DLE_BY_VOLUME.
	* man/xml-source/amanda.conf.5.xml: Document max-dle-by-volume.
	* perl/Amanda/Config.swg: Add CNF_MAX_DLE_BY_VOLUME.